bootstrap/apps/daotao-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daotao
  namespace: education
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: daotao
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: daotao
    spec:
      containers:
        - image: chinhval/educationdaotaowebapp
          imagePullPolicy: Always
          name: daotao-client
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: daotao
  namespace: education
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: daotao
