bootstrap/apps/gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: education
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway
    spec:
      containers:
        - image: chinhval/educationgatewayservice
          imagePullPolicy: Always
          name: gateway
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: education
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gateway
