bootstrap/apps/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: education
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: notification
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notification
    spec:
      containers:
        - image: chinhval/educationnotificationservice
          imagePullPolicy: Always
          name: notification
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: notification
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: notification
