bootstrap/apps/register-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register
  namespace: education
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: register
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: register
    spec:
      containers:
        - image: chinhval/educationregisterservice
          imagePullPolicy: Always
          name: register
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: register
  namespace: education
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: register
