bootstrap/apps/student-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student
  namespace: education
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: student
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: student
    spec:
      containers:
        - image: chinhval/educationstudentservice
          imagePullPolicy: Always
          name: student
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: student
  namespace: education
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: student
