bootstrap/apps/training-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training
  namespace: education
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: training
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: training
    spec:
      containers:
        - image: chinhval/educationtrainingservice
          imagePullPolicy: Always
          name: training
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: training
  namespace: education
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: training
